--- a/wallet.html
+++ b/wallet.html
@@ -103,11 +103,11 @@
             <h2 class="pt-2" id="header_text">透過掃描來領取任務</h2>
         </div>
         <div class="row d-flex justify-content-center py-3 border border-3 border-top-0 border-black" id="camera">
-            <div class="col-12 col-md-7">
+            <div class="col-12 col-md-7 d-flex justify-content-center mb-2">
                 <div class="text-center">
                     <script src="/static/html5-qrcode/dist/html5-qrcode.min.js"></script>
                     <script src="/static/js/qrcode.js"></script>
-                    <div id="qr-reader" style="width: 300px"></div>
+                    <div class="h-100" id="qr-reader"></div>
                 </div>
             </div>
             <div class="col-12 col-md-5">
