交易所功能變動 有介面修改和任務限制和url更改

--- a/trade-request.html
+++ b/trade-request.html
@@ -59,7 +59,7 @@
       <div class="col-12 col-md-6 order-1 order-md-0">
         <div class="mb-3">
           <label for="task_name" class="form-label fs-3 fw-bold">交易任務名稱</label>
-          <input type="text" class="form-control" id="task_name" value="打掃">
+          <input type="text" class="form-control" id="task_name">
         </div>
         <div class="col-4 mb-3">
           <label for="token" class="form-label fs-3 fw-bold">交易時數</label>
