--- a/trade.html
+++ b/trade.html
@@ -57,6 +57,7 @@
   <div class="container" style="background:rgba(157, 245, 182, 0.562);">
     <div class="row border border-3 border-black">
       <div class="col d-flex justify-content-end">
+        <p class="my-1 fs-3 me-5"><i class="bi bi-card-checklist me-2"></i>可交易任務剰<span class="fs-3" id="number_of_task">0</span>個</p>
         <p class="my-1 fs-3"><i class="bi bi-clock me-2"></i>時間餘額<span class="fs-3" id="balance">0</span>小時</p>
       </div>
     </div>
@@ -65,8 +66,7 @@
         <h2 class="my-1"><i class="bi bi-currency-exchange me-2"></i>可兌換服務項目</h2>
       </div>
     </div>
-    <div class="row border border-3 border-top-0 border-black" id="trade"
-      style="background-color: rgba(126, 68, 2, 0.562); height: 650px; overflow-y: scroll;">
+    <div class="row border border-3 border-top-0 border-black" id="trade" style="background-color: rgba(126, 68, 2, 0.562); height: 650px; overflow-y: scroll;">
       <div class="col-12 col-md-4 d-flex justify-content-center align-items-center border border-2 border-dark"
         style="background-image: linear-gradient(to top,rgb(0, 188, 179),rgb(98, 255, 0));">
         <a class=" link-underline link-underline-opacity-0 text-dark fs-1" href="trade-request.html"
