--- a/verified-tasks.html
+++ b/verified-tasks.html
@@ -140,7 +140,7 @@
         </div>
       </div>
     </div>
-    <div class="row justify-content-center bg-dark border border-3 border-bottom-0 border-black">
+    <!-- <div class="row justify-content-center bg-dark border border-3 border-bottom-0 border-black">
       <h1 class="text-light mx-auto my-2">交易紀錄</h1>
     </div>
     <div class="row justify-content-center">
@@ -158,8 +158,8 @@
               </tr>
             </thead>
             <tbody>
-              <!-- 頁面改版檢視用 -->
-              <!-- <tr>
+              頁面改版檢視用
+              <tr>
                 <th scope="row" class="text-center">
                   <div class="form-check">
                     <input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1"
@@ -194,12 +194,12 @@
                 <td class="text-center align-middle">user3@gmail.com</td>
                 <td class="text-center align-middle">mission3</td>
                 <td class="text-center align-middle">5</td>
-              </tr> -->
+              </tr>
             </tbody>
           </table>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="row d-flex justify-content-center bg-dark border border-3 border-top-0 border-black">
       <a href="choice.html"
         class="col-3 col-md-2 m-2 border border-3 border-black rounded-5 link-underline link-underline-opacity-0 btn btn-primary">
