--- a/verifier-cms-content.html
+++ b/verifier-cms-content.html
@@ -83,6 +83,21 @@
               <p class="h5">志工任務時數</p>
               <p><span id="token">0</span>小時</p>
             </div>
+            <div class="mt-3">
+              <p class="h5">所需人數</p>
+              <p><span id="max_people">0</span>人</p>
+            </div>
+            <div class="mt-3">
+              <p class="h5">最低信用積分</p>
+              <p><span id="point_limit">0</span></p>
+            </div>
+            <div class="mt-3">
+              <p class="h5">專長限制</p>
+            </div>
+            <div class="row p-3 mt-0 d-flex align-items-center">
+              <div class="row" id="description_limit">
+              </div>
+            </div>
           </div>
           <div class="col-10 mt-3">
             <div class="row">
@@ -98,7 +113,7 @@
                   <!-- <img class="qr-code-width" src="/static/imgs/verifier-qr-code.png" alt=""> -->
                 </div>
               </div>
-              <div class="row mt-4 mb-5 pb-3">
+              <div class="row mt-4 mb-5 pb-3" id="content_modify">
                 <div class="col-6 d-flex justify-content-center">
                   <button class="btn btn-primary ml-5" onclick="uuid_to_modify()">
                     編輯
@@ -110,6 +125,12 @@
                   </button>
                 </div>
               </div>
+            </div>
+            <div class="row d-flex justify-content-center">
+              <a href="choice.html"
+                class="col-3 col-md-2 m-2 border border-3 border-black rounded-5 link-underline link-underline-opacity-0 btn btn-primary">
+                <p class="fs-3 text-center my-auto text-light">返回</p>
+              </a>
             </div>
           </div>
         </div>
