--- a/wallet.html
+++ b/wallet.html
@@ -40,7 +40,7 @@
                 mission.setAttribute("class", "row row-cols-1 row-cols-md-4 py-3 border border-3 border-top-0 border-black")
                 btn1.setAttribute("class", text + ' d-none');
                 btn2.setAttribute("class", text);
-                header_text.innerHTML = '只顯示適合你的任務 <i class="bi bi-question-circle-fill" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>';
+                header_text.innerHTML = '只顯示適合你的任務 <i class="bi bi-question-circle-fill" data-bs-toggle="modal" data-bs-target="#exampleModal" style="cursor:pointer;"></i>';
             }
             else {
                 camera.setAttribute("class", "row d-flex justify-content-center py-3 border border-3 border-top-0 border-black")
