--- a/issue-verifier.html
+++ b/issue-verifier.html
@@ -73,28 +73,30 @@
             <img class="mr-1 logo-isu" src="/static/imgs/eID-logo.png">
             <img class="logo-isu" src="/static/imgs/ISU logo-s.png">
           </a>
-          <a class="navbar-brand mr-0 ml-auto d-sm-none" href="#" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
-            <img style="width: 45px"src="/static/imgs/user-edit-solid.svg">
+          <a class="navbar-brand mr-0 ml-auto d-sm-none" href="#" data-toggle="dropdown" href="#" role="button"
+            aria-expanded="false">
+            <img style="width: 45px" src="/static/imgs/user-edit-solid.svg">
           </a>
-            <ul class="nav nav-tabs w-100 mr-sm-3 mt-3 mt-sm-0">
-              <li class="nav-item">
-                <a class="nav-link px-2 px-sm-3" href="/eid.html">身分證</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active px-2 px-sm-3" href="/issues.html">永續合作</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link px-2 px-sm-3" href="/foot_print.html">數位足跡</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link px-2 px-sm-3" href="/wallet.html">領取任務</a>
-              </li>
-            </ul>
-            <a class="navbar-brand mr-0 ml-auto d-none d-sm-block" href="#" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
-              <img style="width: 45px"src="/static/imgs/user-edit-solid.svg">
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" id="dropdown">
-            </div>
+          <ul class="nav nav-tabs w-100 mr-sm-3 mt-3 mt-sm-0">
+            <li class="nav-item">
+              <a class="nav-link px-2 px-sm-3" href="/eid.html">身分證</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active px-2 px-sm-3" href="/issues.html">永續合作</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-2 px-sm-3" href="/foot_print.html">數位足跡</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-2 px-sm-3" href="/wallet.html">領取任務</a>
+            </li>
+          </ul>
+          <a class="navbar-brand mr-0 ml-auto d-none d-sm-block" href="#" data-toggle="dropdown" href="#" role="button"
+            aria-expanded="false">
+            <img style="width: 45px" src="/static/imgs/user-edit-solid.svg">
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" id="dropdown">
+          </div>
         </nav>
 
         <div class="container">
