--- a/reset-pw.html
+++ b/reset-pw.html
@@ -1,51 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" 
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link href="/static/css/style.css" rel="stylesheet" type="text/css">
-    <script src="/static/js/localStorage.js"></script>
-  </head>
 
-  <body>
-    <div class="container-fluid border border-secondary border-width-lg min-vh-100">
-      <div class="row">
-        <div class="col">
-          <nav class="navbar navbar-light bg-white py-0">
-            <a class="navbar-brand" href="index.html">
-              <img class="mr-1 logo-isu" src="/static/imgs/eID-logo.png">
-              <img class="logo-isu" src="/static/imgs/ISU logo-s.png">
-            </a>
-          </nav>
-        </div>
-      </div>
-      <form>
-        <div class="row justify-content-center mt-4">
-          <div class="col-11 col-sm-7 bg-light rounded-lg py-2">
-            <p class="h4 text-center">重新設定密碼</p>
-            <p>電子郵件自動顯示</p>
-            <div class="form-group">
-              <input type="password" class="form-control form-control-sm" id="password1"  placeholder="密碼">
-            </div>
-            <div class="form-group mb-0">
-              <input type="password" class="form-control form-control-sm" id="password2" placeholder="確認密碼">
-              <small class="fz-xs text-danger">密碼不得少於 8 字元</small>
-            </div>
-            <div class="text-center my-2">
-              <button type="submit" class="btn btn-primary btn-block">更新密碼</button>
-            </div>
-          </div>
-        </div>
-      </form>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <link href="/static/css/style.css" rel="stylesheet" type="text/css">
+  <script src="/static/js/localStorage.js"></script>
+</head>
+
+<body>
+  <div class="container-fluid border border-secondary border-width-lg min-vh-100">
+    <div class="row">
+      <div class="col">
+        <nav class="navbar navbar-light bg-white py-0">
+          <a class="navbar-brand" href="index.html">
+            <img class="mr-1 logo-isu" src="/static/imgs/eID-logo.png">
+            <img class="logo-isu" src="/static/imgs/ISU logo-s.png">
+          </a>
+        </nav>
       </div>
     </div>
-  </body>
+    <form>
+      <div class="row justify-content-center mt-4">
+        <div class="col-11 col-sm-7 bg-light rounded-lg py-2">
+          <p class="h4 text-center">重新設定密碼</p>
+          <p>電子郵件自動顯示</p>
+          <div class="form-group">
+            <input type="password" class="form-control form-control-sm" id="password1" placeholder="密碼">
+          </div>
+          <div class="form-group mb-0">
+            <input type="password" class="form-control form-control-sm" id="password2" placeholder="確認密碼">
+            <small class="fz-xs text-danger">密碼不得少於 8 字元</small>
+          </div>
+          <div class="text-center my-2">
+            <button type="submit" class="btn btn-primary btn-block">更新密碼</button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+  </div>
+</body>
+
 </html>
